《Objective-C 高级编程》读书笔记

--- a/Notes/03.《Objective-C 高级编程：iOS 与 OS X 多线程和内存管理》读书笔记.md
+++ b/Notes/03.《Objective-C 高级编程：iOS 与 OS X 多线程和内存管理》读书笔记.md
@@ -604,7 +604,14 @@ for (int i = 0; i < 100000; i++) {
 
 ### 4.7. Dispatch I/O / Dispatch Data
 
-在读取较大的文件时，如果将文件分成合适的大小并使用并行队列读取的话,应该会比一般的读取速度快不少。 在 GCD 当中能实现这一功能的就是 Dispatch I/O 和 Dispatch Data。
+在读取较大的文件时，如果将文件分成合适的大小并使用并行队列读取的话,应该会比一般的读取速度快不少。 在 GCD 当中能实现这一功能的就是 Dispatch I/O 和 Dispatch Data。具体代码实现参照 Apple System Log API 里的[源代码](https://opensource.apple.com/source/Libc/Libc-763.11/gen/asl.c)。
+
+
+## 5. GCD 的实现
+
+涉及到低层的太多，总结不出来，只能贴上原文了。。。
+
+
 
 
 ## 后记
