--- a/Notes/03.《Objective-C 高级编程：iOS 与 OS X 多线程和内存管理》读书笔记.md
+++ b/Notes/03.《Objective-C 高级编程：iOS 与 OS X 多线程和内存管理》读书笔记.md
@@ -609,7 +609,7 @@ for (int i = 0; i < 100000; i++) {
 
 ## 5. GCD 的实现
 
-涉及到低层的太多，总结不出来，只能贴上原文了。。。
+涉及到低层的太多，总结不出来，只能贴上[原文](https://github.com/Mayan29/Blog/blob/master/Notes/SDK/03.《Objective-C%20高级编程：iOS%20与%20OS%20X%20多线程和内存管理》读书笔记/GCD的实现.pdf)了。。。
 
 
 
@@ -617,3 +617,5 @@ for (int i = 0; i < 100000; i++) {
 ## 后记
 
 > 去年仅阅读了第一篇章，今年花了 3、4 天时间把整本书全部阅读完成。感觉讲的挺不错的，就是废话略多，好多地方需要认认真真仔仔细细的看，看明白了发现，这部分知识早就懂了嘛。感觉比较有用的地方是，block 编译成 c++ 代码后的解析，对 block 低层实现原理豁然开朗。
+> 
+> 本以为年前没有工作，可以慢慢地看书了，突然在年前要启动一个新项目，有点浮躁了，后面的 GCD 低层看不下去了，心态崩了[衰]
