《Objective-C 高级编程》读书笔记

--- a/Notes/03.《Objective-C 高级编程：iOS 与 OS X 多线程和内存管理》读书笔记.md
+++ b/Notes/03.《Objective-C 高级编程：iOS 与 OS X 多线程和内存管理》读书笔记.md
@@ -616,6 +616,6 @@ for (int i = 0; i < 100000; i++) {
 
 ## 后记
 
-> 去年仅阅读了第一篇章，今年花了 3、4 天时间把整本书全部阅读完成。感觉讲的挺不错的，就是废话略多，好多地方需要认认真真仔仔细细的看，看明白了发现，这部分知识早就懂了嘛。感觉比较有用的地方是，block 编译成 c++ 代码后的解析，对 block 低层实现原理豁然开朗。
+> 去年仅阅读了第一篇章，今年花了 4、5 天时间把整本书全部阅读完成。感觉讲的挺不错的，就是翻译的有点不通顺，废话也略多，好多地方需要认认真真仔仔细细的看，看明白了发现，这部分知识早就懂了嘛。感觉比较有用的地方是，block 编译成 c++ 代码后的解析，对 block 低层实现原理豁然开朗。
 > 
-> 本以为年前没有工作，可以慢慢地看书了，突然在年前要启动一个新项目，有点浮躁了，后面的 GCD 低层看不下去了，心态崩了[衰]
+> 本以为年前没有工作，可以慢慢地看书了，突然要在年前启动一个新项目，有点浮躁了，后面的 GCD 低层看不下去了，心态崩了[衰]
