完善《Objective-C 高级编程：iOS 与 OS X 多线程和内存管理》

--- a/Notes/01.《iOS 开发进阶（唐巧）》读书笔记.md
+++ b/Notes/01.《iOS 开发进阶（唐巧）》读书笔记.md
@@ -115,10 +115,8 @@ $ pod install
 
 参考以下两篇文章：
 
-- 《如何编写一个 CocoaPods 的 spec 文件》
-	- http://ishalou.com/blog/2012/10/16/how-to-create-a-cocoapods-spec-file/
-- 《Cocoapods 入门》
-	- http://studentdeng.github.io/blog/2013/09/13/cocoapods-tutorial/
+- [《如何编写一个 CocoaPods 的 spec 文件》](http://ishalou.com/blog/2012/10/16/how-to-create-a-cocoapods-spec-file/)
+- [《Cocoapods 入门》](http://studentdeng.github.io/blog/2013/09/13/cocoapods-tutorial/)
 
 #### 使用私有的 pods
 
@@ -325,47 +323,7 @@ CFRetain 和 CFRelease 方法与 Objective-C 对象的 retain 和 release 方法
 - `__bridge_transfer`：类型转换后，将该对象的引用计数交给 ARC 管理，Core Foundation 对象在不用时，不再需要调用 CFRelease 方法
 
 
-## 五、GCD
-
-### 1. 线程组
-
-```objc
-dispatch_group_t group = dispatch_group_create();
-dispatch_group_async(group, dispatch_get_global_queue(0, 0), ^{
-    NSLog(@"任务一完成");
-});
-dispatch_group_async(group, dispatch_get_global_queue(0, 0), ^{
-    sleep(2);
-    NSLog(@"任务二完成");
-});
-dispatch_group_notify(group, dispatch_get_global_queue(0, 0), ^{
-    NSLog(@"任务全部完成");
-});
-dispatch_async(dispatch_get_global_queue(0, 0), ^{
-    dispatch_group_wait(group, dispatch_time(DISPATCH_TIME_NOW, 3 * NSEC_PER_SEC));
-    NSLog(@"dispatch_group_wait 结束");
-});
-```
-
-打印结果为
-
-```
-任务一完成
-任务二完成
-任务全部完成
-dispatch_group_wait 结束
-```
-
-如果将任务二的阻断时间改为 5 秒，结果为：
-
-```
-任务一完成
-dispatch_group_wait 结束
-任务二完成
-任务全部完成
-```
-
-### 2. 后台运行
+## 五、后台运行
 
 正常情况下，当应用按 Home 键退出后，应用仅有最多 5 秒时间做一些保存后请理资源的工作。但是应用可以调用后台方法，让应用最多有 10 分钟的时间在后台长久运行。
 
@@ -689,7 +647,6 @@ iOS 7 以后的系统，可以通过系统提供的 API 来实现截屏功能
 
 快捷键 | 说明 
 --- | ---
-Ctrl + 6 | 列出当前文件中所有方法，快速定位方法位置
 Cmd + Ctrl + Up | 在 .h 和 .m 文件之间切换
 Cmd + Ctrl + Left | 到上 / 下一次编辑的位置
 Cmd + Shift + F | 在工程中查找
@@ -1052,7 +1009,7 @@ NSLog(@"%@", ^{
 ### 11.3 循环引用
 
 1. 在 MRC 时代，__block 修饰避免循环引用；ARC 时代，__block 修饰同样会引起循环引用；
-2. 不用 __block 修饰，block 外的变量引用，是复制其本事；使用 __block 修饰，block 外的变量引用，是复制其引用地址；
+2. 不用 __block 修饰，block 外的变量引用，是复制其本身；使用 __block 修饰，block 外的变量引用，是复制其引用地址；
 3. __block 不管是 ARC 还是 MRC 模式下都可以修饰对象和基本数据类型；__weak 只能在 ARC 模式下使用，也只能修饰对象，不能修饰基本数据类型；
 4. __block 对象可以在 block 中被重新赋值，__weak 不可以。
 
