--- a/Notes/03.《Objective-C 高级编程：iOS 与 OS X 多线程和内存管理》读书笔记.md
+++ b/Notes/03.《Objective-C 高级编程：iOS 与 OS X 多线程和内存管理》读书笔记.md
@@ -362,9 +362,6 @@ int main(int argc, const char * argv[]) {
 我们没有必要通过 `dispatch_queue_create` 函数逐个生成队列，只要获取系统标准提供的队列 `Global Dispatch Queue` 即可，获取方法如下：
 
 ```objc
-// Main Dispatch Queue 的获取方法
-dispatch_queue_t mainQueue = dispatch_get_main_queue();
-    
 // Global Dispatch Queue（高优先级）的获取方法
 dispatch_queue_t hightQueue = dispatch_get_global_queue(DISPATCH_QUEUE_PRIORITY_HIGH, 0);
     
@@ -524,7 +521,7 @@ NSLog(@"done");
 2018-02-02 14:35:09.766958+0800 Test[10156:311140] done
 ```
 
-### 4.5. dispatch\_suspend / dispatch\_resume
+### 4.4. dispatch\_suspend / dispatch\_resume
 
 `dispatch_suspend` 和 `dispatch_resume` 提供了挂起、恢复队列的功能，简单来说，就是可以暂停、恢复队列上的任务。但是这里的挂起，并不能保证可以立即停止队列上正在运行的 `block`，未执行的 `block` 会被挂起。
 
@@ -567,7 +564,7 @@ dispatch_resume(queue);
 2018-02-02 15:00:31.826083+0800 Test[10265:348327] 挂起队列之前，延迟 5 秒后的打印，再一次
 ```
 
-### 4.6. dispatch\_semaphore\_wait / dispatch\_semaphore\_signal
+### 4.5. dispatch\_semaphore\_wait / dispatch\_semaphore\_signal
 
 当并行执行的处理更新数据时，会产生数据不一致的情况，有时应该程序还会异常结束。如下例子，不考虑顺序，将所有数据添加到 `NSMutableArray` 中：
 
@@ -602,7 +599,7 @@ for (int i = 0; i < 100000; i++) {
 }
 ```
 
-### 4.7. Dispatch I/O / Dispatch Data
+### 4.6. Dispatch I/O / Dispatch Data
 
 在读取较大的文件时，如果将文件分成合适的大小并使用并行队列读取的话,应该会比一般的读取速度快不少。 在 GCD 当中能实现这一功能的就是 Dispatch I/O 和 Dispatch Data。具体代码实现参照 Apple System Log API 里的[源代码](https://opensource.apple.com/source/Libc/Libc-763.11/gen/asl.c)。
 
@@ -616,6 +613,6 @@ for (int i = 0; i < 100000; i++) {
 
 ## 后记
 
-> 去年仅阅读了第一篇章，今年花了 4、5 天时间把整本书全部阅读完成。感觉讲的挺不错的，就是翻译的有点不通顺，废话也略多，好多地方需要认认真真仔仔细细的看，看明白了发现，这部分知识早就懂了嘛。感觉比较有用的地方是，block 编译成 c++ 代码后的解析，对 block 低层实现原理豁然开朗。
+> 去年仅阅读了第一篇章，今年花了 4、5 天时间把整本书全部阅读完成。感觉讲的挺不错的，就是翻译的有点不通顺，废话也略多。感觉比较有用的地方是，block 编译成 c++ 代码后的解析，对 block 低层实现原理豁然开朗。
 > 
-> 本以为年前没有工作，可以慢慢地看书了，突然要在年前启动一个新项目，有点浮躁了，后面的 GCD 低层看不下去了，心态崩了[衰]
+> 本以为年前没有迭代任务，可以慢慢地看书了，突然要在年前启动一个新项目，有点浮躁了，后面的 GCD 低层看不下去了，心态崩了[衰]
